--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -46,7 +46,7 @@
 	<!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView">
 		<img src="Images/Wooden_Todo_256x256.png" alt="TODOs" />
-		<a data-role="button" data-rel="modalview" href="#loginDialog" id="openLoginButton">Login</a>
+		<a data-role="button" data-rel="modalview" href="#loginDialog" id="openLoginButton">Authenticate</a>
 	</div>
 
 	<!-- TODOs page -->
