--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -12,8 +12,6 @@
 	<link rel="apple-touch-startup-image" href="images/splash.png" media="screen and (max-device-width: 320px)" />
 	
 	<link href="styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
-	<link href="styles/toastr.min.css" rel="stylesheet" type="text/css" />
-	<link href="styles/toastr-responsive.min.css" rel="stylesheet" type="text/css" />
 	<link href="styles/app.min.css" rel="stylesheet" type="text/css" />
 	
 	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
@@ -21,7 +19,6 @@
 	<script src="js/jquery.base64.min.js" type="text/javascript"></script>
 	<script src="js/kendo.mobile.min.js" type="text/javascript"></script>
 	<script src="js/amplify.min.js" type="text/javascript"></script>
-	<script src="js/toastr.min.js" type="text/javascript"></script>
 	<script src="js/notifier.min.js" type="text/javascript"></script>
 	<script src="js/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
 	<!--<script src="../signalr/hubs" type="text/javascript"></script>-->
@@ -30,10 +27,10 @@
 	<script src="Scripts/constants.js" type="text/javascript"></script>
 	<script src="Scripts/views.js" type="text/javascript"></script>	
 	<script src="Scripts/app.js" type="text/javascript"></script>
-	<script src="Scripts/services.js" type="text/javascript"></script>
-	<script src="Scripts/authentication.js" type="text/javascript"></script>
-	<script src="Scripts/todos.js" type="text/javascript"></script>
-	<script src="Scripts/newtodo.js" type="text/javascript"></script>	
+	<script src="Scripts/remoteservices.js" type="text/javascript"></script>
+	<script src="Scripts/authenticationViewModel.js" type="text/javascript"></script>
+	<script src="Scripts/todosViewModel.js" type="text/javascript"></script>
+	<script src="Scripts/newTodoItemViewModel.js" type="text/javascript"></script>	
 	<script src="Scripts/notifications.js" type="text/javascript"></script>
 </head>
 <body>
@@ -46,7 +43,7 @@
 	<!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView">
 		<img src="Images/Wooden_Todo_256x256.png" alt="TODOs" />
-		<a data-role="button" data-rel="modalview" href="#loginDialog" id="openLoginButton">Authenticate</a>
+		<a data-role="button" data-rel="modalview" href="#loginDialog" id="openLoginButton">Start</a>
 	</div>
 
 	<!-- TODOs page -->
@@ -99,7 +96,7 @@
 	</div>
 
 	<!-- Add TODO page -->
-	<div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-layout="withBackButtonView" data-model="todoItemViewModel" data-before-show="beforePageShow">
+	<div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-layout="withBackButtonView" data-model="newTodoItemViewModel" data-before-show="beforePageShow">
 		<br />
 		<h2>New Item</h2>
 		
@@ -171,7 +168,7 @@
 	
 	<!-- Global modal views/dialogs -->
 	<!-- Login dialog -->
-	<div data-role="modalview" id="loginDialog" style="width: 95%; height: 50%;" data-model="loginViewModel">
+	<div data-role="modalview" id="loginDialog" style="width: 95%; height: 50%;" data-model="authenticationViewModel">
 		<div data-role="header">
 			<div data-role="navbar">
 				<span>User Login</span>
@@ -193,14 +190,14 @@
 	<div data-role="modalview" id="commonErrorDialog" style="width: 280px">
 		<div data-role="header">
 			<div data-role="navbar">
-				<a data-align="right" data-role="button" data-click="closeModalView">X</a>
+				<a data-align="right" data-role="button" data-click="closeDialog">X</a>
 			</div>
 		</div>
 		<ul data-role="listview">
 			<li>Error.</li>
 		</ul>
 		<p>
-			<a data-role="button" type="button" id="commonErrorButton" data-click="closeModalView">OK</a>
+			<a data-role="button" type="button" id="commonErrorButton" data-click="closeDialog">OK</a>
 		</p>
 	</div>
 </body>
