--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -24,14 +24,15 @@
 	<!--<script src="../signalr/hubs" type="text/javascript"></script>-->
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
 	
+	<script src="Scripts/app.js" type="text/javascript"></script>
 	<script src="Scripts/constants.js" type="text/javascript"></script>
 	<script src="Scripts/views.js" type="text/javascript"></script>	
-	<script src="Scripts/app.js" type="text/javascript"></script>
-	<script src="Scripts/remoteservices.js" type="text/javascript"></script>
+	<script src="Scripts/notifications.js" type="text/javascript"></script>
+    <script src="Scripts/remoteservices.js" type="text/javascript"></script>
 	<script src="Scripts/authenticationViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/todosViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/newTodoItemViewModel.js" type="text/javascript"></script>	
-	<script src="Scripts/notifications.js" type="text/javascript"></script>
+	<script src="Scripts/errorViewModel.js" type="text/javascript"></script>	
 </head>
 <body>
 	<!-- Templates -->
@@ -123,11 +124,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.1 (2012-09-21.1)
+				Version 0.2 (2012-09-26.1)
 				<img data-align="right" alt="TODOs" src="Images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-09-21.1)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-09-26.1)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
@@ -187,17 +188,18 @@
 	</div>
 
 	<!-- Error dialog -->
-	<div data-role="modalview" id="commonErrorDialog" style="width: 280px">
+	<div data-role="modalview" id="errorDialog" style="width: 80%; height: 50%;" data-model="errorViewModel">
 		<div data-role="header">
 			<div data-role="navbar">
-				<a data-align="right" data-role="button" data-click="closeDialog">X</a>
+                <span>Error</span>
+				<a data-bind="click: closeErrorDialog" data-role="button" data-align="right">X</a>
 			</div>
 		</div>
-		<ul data-role="listview">
-			<li>Error.</li>
+		<ul data-role="listview" id="errorText">
+			<li><span data-bind="text: message">Error.</span></li>
 		</ul>
 		<p>
-			<a data-role="button" type="button" id="commonErrorButton" data-click="closeDialog">OK</a>
+			<a data-role="button" type="button" id="commonErrorButton" data-bind="click: closeErrorDialog">OK</a>
 		</p>
 	</div>
 </body>
