--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -28,7 +28,7 @@
 	<script src="Scripts/constants.js" type="text/javascript"></script>
 	<script src="Scripts/views.js" type="text/javascript"></script>	
 	<script src="Scripts/notifications.js" type="text/javascript"></script>
-    <script src="Scripts/remoteservices.js" type="text/javascript"></script>
+	<script src="Scripts/remoteservices.js" type="text/javascript"></script>
 	<script src="Scripts/authenticationViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/todosViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/newTodoItemViewModel.js" type="text/javascript"></script>	
@@ -43,8 +43,20 @@
 	
 	<!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView">
-		<img src="Images/Wooden_Todo_256x256.png" alt="TODOs" />
+		<header data-role="header">
+			<div data-role="navbar">
+				<span data-role="view-title"></span>
+			</div>
+		</header>
+        <img src="Images/Wooden_Todo_256x256.png" alt="TODOs" />
 		<a data-role="button" data-rel="modalview" href="#loginDialog" id="openLoginButton">Start</a>
+        <footer data-role="footer">
+			<div data-role="tabstrip">
+				<a data-icon="home" href="#startPage">Home</a>
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="info" href="#infoPage">Info</a>
+			</div>
+		</footer>
 	</div>
 
 	<!-- TODOs page -->
@@ -73,8 +85,14 @@
 	</div>
 
 	<!-- TODO details page -->
-	<div id="todoDetailsPage" data-role="view" data-title="Details" data-layout="withBackButtonView" data-model="todosViewModel" data-before-show="beforePageShow">
-		<br />
+	<div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-before-show="beforePageShow">
+		<header data-role="header">
+			<div data-role="navbar">
+				<a data-role="backbutton" data-align="left">Back</a>
+				<span data-role="view-title"></span>
+			</div>
+		</header>
+        <br />
 		<h2>Item Details</h2>
 
 		<ul data-role="listview" data-style="inset">
@@ -93,12 +111,25 @@
 		</ul>
 
 		<br />
-		<a id="saveTodoButton" data-bind="click: updateTodo" data-role="button">Save</a>   
+		<a id="saveTodoButton" data-bind="click: updateTodo" data-role="button">Save</a>
+        <footer data-role="footer">
+			<div data-role="tabstrip">
+				<a data-icon="home" href="#startPage">Home</a>
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="info" href="#infoPage">Info</a>
+			</div>
+		</footer>
 	</div>
 
 	<!-- Add TODO page -->
-	<div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-layout="withBackButtonView" data-model="newTodoItemViewModel" data-before-show="beforePageShow">
-		<br />
+	<div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-before-show="beforePageShow">
+		<header data-role="header">
+			<div data-role="navbar">
+				<a data-role="backbutton" data-align="left">Back</a>
+				<span data-role="view-title"></span>
+			</div>
+		</header>
+        <br />
 		<h2>New Item</h2>
 		
 		<ul data-role="listview" data-style="inset">
@@ -114,35 +145,7 @@
 
 		<br />
 		<a id="addTodoButton" data-bind="click: saveTodo" data-role="button">Save</a>
-	</div>
-
-	<!-- Info/About page -->
-	<div id="infoPage" data-role="view" data-title="TODOs" data-layout="defaultView">
-		<div>
-		<br />
-		<h2>About TODO Items</h2>
-			
-		<ul data-role="listview" data-style="inset">
-			<li>
-				Version 0.2 (2012-09-26.1)
-				<img data-align="right" alt="TODOs" src="Images/Wooden_Todo_32x32.png" style="float: right"/>
-			</li>
-			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-09-26.1)" data-rel="external">Christian Weyer</a>
-				<a data-role="detailbutton" data-icon="compose"></a>
-			</li>
-		</ul>      				
-		</div>
-	</div>
-
-	<!-- Layouts -->    
-	<div data-role="layout" data-id="defaultView" data-title="TODOs">
-		<header data-role="header">
-			<div data-role="navbar">
-				<span data-role="view-title"></span>
-			</div>
-		</header>
-		<footer data-role="footer">
+        <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
 				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
@@ -151,13 +154,26 @@
 		</footer>
 	</div>
 
-	<div data-role="layout" data-id="withBackButtonView" data-title="TODOs">
+	<!-- Info/About page -->
+	<div id="infoPage" data-role="view" data-title="TODOs" data-layout="defaultView">
 		<header data-role="header">
 			<div data-role="navbar">
-				<a data-role="backbutton" data-align="left">Back</a>
 				<span data-role="view-title"></span>
 			</div>
 		</header>
+		<br />
+		<h2>About TODO Items</h2>
+			
+		<ul data-role="listview" data-style="inset">
+			<li>
+				Version 0.2 (2012-09-26.2)
+				<img data-align="right" alt="TODOs" src="Images/Wooden_Todo_32x32.png" style="float: right"/>
+			</li>
+			<li>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-09-26.2)" data-rel="external">Christian Weyer</a>
+				<a data-role="detailbutton" data-icon="compose"></a>
+			</li>
+		</ul>      				
 		<footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
@@ -172,8 +188,8 @@
 	<div data-role="modalview" id="loginDialog" style="width: 95%; height: 50%;" data-model="authenticationViewModel">
 		<div data-role="header">
 			<div data-role="navbar">
-				<span>User Login</span>
-				<a data-bind="click: cancelLoginDialog" data-role="button" data-align="right">Cancel</a>
+				<span data-role="view-title">User Login</span>
+				<a data-bind="click: closeLoginDialog" data-role="button" data-align="right">Cancel</a>
 			</div>
 		</div>
 		<ul data-role="listview" data-style="inset">
@@ -188,10 +204,10 @@
 	</div>
 
 	<!-- Error dialog -->
-	<div data-role="modalview" id="errorDialog" style="width: 80%; height: 50%;" data-model="errorViewModel">
+	<div data-role="modalview" id="errorDialog" style="width: 85%; height: 50%;" data-model="errorViewModel">
 		<div data-role="header">
 			<div data-role="navbar">
-                <span>Error</span>
+				<span data-role="view-title">Error</span>
 				<a data-bind="click: closeErrorDialog" data-role="button" data-align="right">X</a>
 			</div>
 		</div>
