--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -21,35 +21,67 @@
 	<script src="js/amplify.min.js" type="text/javascript"></script>
 	<script src="js/notifier.min.js" type="text/javascript"></script>
 	<script src="js/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
-	<!--<script src="../signalr/hubs" type="text/javascript"></script>-->
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
 	
+    <script src="cordova.js" type="text/javascript"></script>
+
 	<script src="Scripts/app.js" type="text/javascript"></script>
+    <script src="Scripts/configuration.js" type="text/javascript"></script>
 	<script src="Scripts/constants.js" type="text/javascript"></script>
+    <script src="Scripts/startViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/views.js" type="text/javascript"></script>	
 	<script src="Scripts/notifications.js" type="text/javascript"></script>
 	<script src="Scripts/remoteservices.js" type="text/javascript"></script>
 	<script src="Scripts/authenticationViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/todosViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/newTodoItemViewModel.js" type="text/javascript"></script>	
-	<script src="Scripts/errorViewModel.js" type="text/javascript"></script>	
+	<script src="Scripts/errorViewModel.js" type="text/javascript"></script>
+    <script src="Scripts/acsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
 	<!-- Templates -->
-	<script type="text/x-kendo-template" id="tasksListTemplate">		
+	<script type="text/x-kendo-template" id="tasksListTemplate">
 		<a data-align="left" data-bind="events:{touchend: navigateTodoDetails}">${title}</a>
 		<a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
 	</script>
-	
+	<script type="text/x-kendo-template" id="idpListTemplate">
+    
+        <img src="${imageUrl}" style="border: 0px; height: 20px" class="idpList" />        
+        <button type="button" class="idpList" onclick="acsViewModel.openAuthWindow('${loginUrl}')">${name}</button>
+	</script>
+
 	<!-- Start page -->
-	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView">
+	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView" data-model="startViewModel">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
 			</div>
 		</header>
         <img src="Images/Wooden_Todo_256x256.png" alt="TODOs" />
-		<a data-role="button" data-rel="modalview" href="#loginDialog" id="openLoginButton">Start</a>
+		<a data-role="button" id="openLoginButton" data-bind="click: openLoginView">Login</a>
+        <footer data-role="footer">
+			<div data-role="tabstrip">
+				<a data-icon="home" href="#startPage">Home</a>
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="info" href="#infoPage">Info</a>
+			</div>
+		</footer>
+	</div>
+
+    <!-- ACS Login page -->
+    <div id="acsLogin" data-role="view" data-title="Login" data-model="acsViewModel" data-show="acsLoginShow">
+		<header data-role="header">
+			<div data-role="navbar">
+				<span data-role="view-title"></span>
+			</div>
+		</header>		
+		<br />
+		<h2>Choose your Identity Provider</h2>
+		<br />
+
+        <ul id="idps" data-role="listview" data-bind="source: idpsSource" data-template="idpListTemplate" data-style="inset">
+		</ul>
+
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
@@ -112,6 +144,7 @@
 
 		<br />
 		<a id="saveTodoButton" data-bind="click: updateTodo" data-role="button">Save</a>
+
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
@@ -166,11 +199,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.2 (2012-09-27.1)
+				Version 0.2 (2012-10-2.1)
 				<img data-align="right" alt="TODOs" src="Images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-09-27.1)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-2.1)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
