--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -21,13 +21,14 @@
 	<script src="js/amplify.min.js" type="text/javascript"></script>
 	<script src="js/notifier.min.js" type="text/javascript"></script>
 	<script src="js/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
+    <script src="js/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
 	
     <script src="cordova.js" type="text/javascript"></script>
+    <script src="childbrowser.js" type="text/javascript"></script>
 
 	<script src="Scripts/app.js" type="text/javascript"></script>
-    <script src="Scripts/configuration.js" type="text/javascript"></script>
-	<script src="Scripts/constants.js" type="text/javascript"></script>
+    <script src="Scripts/constants.js" type="text/javascript"></script>
     <script src="Scripts/startViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/views.js" type="text/javascript"></script>	
 	<script src="Scripts/notifications.js" type="text/javascript"></script>
@@ -37,6 +38,7 @@
 	<script src="Scripts/newTodoItemViewModel.js" type="text/javascript"></script>	
 	<script src="Scripts/errorViewModel.js" type="text/javascript"></script>
     <script src="Scripts/acsViewModel.js" type="text/javascript"></script>
+    <script src="Scripts/settingsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
 	<!-- Templates -->
@@ -45,11 +47,10 @@
 		<a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
 	</script>
 	<script type="text/x-kendo-template" id="idpListTemplate">
-    
-        <img src="${imageUrl}" style="border: 0px; height: 20px" class="idpList" />        
-        <button type="button" class="idpList" onclick="acsViewModel.openAuthWindow('${loginUrl}')">${name}</button>
+        <img src="${imageUrl}" style="border: 0px; height: 20px"/>        
+        <button type="button" onclick="acsViewModel.openAuthWindow('${loginUrl}')">${name}</button>
 	</script>
-
+    
 	<!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView" data-model="startViewModel">
 		<header data-role="header">
@@ -63,6 +64,7 @@
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
 				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+                <a data-icon="settings" href="#settingsPage">Settings</a> 
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
 		</footer>
@@ -85,7 +87,8 @@
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
-				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+                <a data-icon="settings" href="#settingsPage">Settings</a>
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
 		</footer>
@@ -111,6 +114,7 @@
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
 				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+                <a data-icon="settings" href="#settingsPage">Settings</a>
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
 		</footer>
@@ -148,7 +152,8 @@
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
-				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+                <a data-icon="settings" href="#settingsPage">Settings</a>
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
 		</footer>
@@ -181,7 +186,37 @@
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
-				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+                <a data-icon="settings" href="#settingsPage">Settings</a>
+				<a data-icon="info" href="#infoPage">Info</a>
+			</div>
+		</footer>
+	</div>
+
+    <!-- Settings page -->
+	<div id="settingsPage" data-role="view" data-title="TODOs" data-layout="defaultView" data-model="settingsViewModel">
+		<header data-role="header">
+			<div data-role="navbar">
+				<span data-role="view-title"></span>
+			</div>
+		</header>
+		<br />
+		<h2>Settings</h2>
+			
+		<ul data-role="listview" data-style="inset">
+			 <li>
+                <select data-bind="value: authenticationMode">
+                    <option value="Basic">Basic Authentication</option>
+                    <option value="ACS">Windows Azure Access Control Service (ACS)</option>
+                </select>
+                Authentication mode
+            </li>
+		</ul>      				
+		<footer data-role="footer">
+			<div data-role="tabstrip">
+				<a data-icon="home" href="#startPage">Home</a>
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+                <a data-icon="settings" href="#settingsPage">Settings</a>
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
 		</footer>
@@ -210,7 +245,8 @@
 		<footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
-				<a data-icon="bookmarks" href="#todosPage">TODOs</a> 
+				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+                <a data-icon="settings" href="#settingsPage">Settings</a>
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
 		</footer>
