Changes in basic auth handling

--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -206,10 +206,10 @@
 		<ul data-role="listview" data-style="inset">
 			 <li>
                 <select data-bind="value: authenticationMode">
-                    <option value="Basic">Basic Authentication</option>
-                    <option value="ACS">Windows Azure Access Control Service (ACS)</option>
+                    <option value="Basic">Basic</option>
+                    <option value="ACS">ACS</option>
                 </select>
-                Authentication mode
+                Authentication
             </li>
 		</ul>      				
 		<footer data-role="footer">
