--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -30,16 +30,16 @@
 	
 	<script src="Scripts/app.js" type="text/javascript"></script>
     <script src="Scripts/constants.js" type="text/javascript"></script>
-    <script src="Scripts/startViewModel.js" type="text/javascript"></script>
-	<script src="Scripts/views.js" type="text/javascript"></script>	
-	<script src="Scripts/notifications.js" type="text/javascript"></script>
-	<script src="Scripts/remoteservices.js" type="text/javascript"></script>
-	<script src="Scripts/authenticationViewModel.js" type="text/javascript"></script>
-	<script src="Scripts/todosViewModel.js" type="text/javascript"></script>
-	<script src="Scripts/newTodoItemViewModel.js" type="text/javascript"></script>	
-	<script src="Scripts/errorViewModel.js" type="text/javascript"></script>
-    <script src="Scripts/acsViewModel.js" type="text/javascript"></script>
-    <script src="Scripts/settingsViewModel.js" type="text/javascript"></script>
+    <script src="Scripts/views.js" type="text/javascript"></script>	
+    <script src="Scripts/ViewModels/startViewModel.js" type="text/javascript"></script>	
+	<script src="Scripts/Services/notifications.js" type="text/javascript"></script>
+	<script src="Scripts/Services/dataservices.js" type="text/javascript"></script>
+	<script src="Scripts/ViewModels/authenticationViewModel.js" type="text/javascript"></script>
+	<script src="Scripts/ViewModels/todosViewModel.js" type="text/javascript"></script>
+	<script src="Scripts/ViewModels/newTodoItemViewModel.js" type="text/javascript"></script>	
+	<script src="Scripts/ViewModels/errorViewModel.js" type="text/javascript"></script>
+    <script src="Scripts/ViewModels/acsViewModel.js" type="text/javascript"></script>
+    <script src="Scripts/ViewModels/settingsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
 	<!-- Templates -->
@@ -96,7 +96,7 @@
 	</div>
 
 	<!-- TODOs page -->
-	<div id="todosPage" data-role="view" data-title="TODOs" data-model="todosViewModel" data-init="todosPageInit" data-show="todosPageShow" data-before-show="beforePageShow">
+	<div id="todosPage" data-role="view" data-title="TODOs" data-model="todosViewModel" data-init="todosPageInit" data-before-show="beforePageShow">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
