--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -30,10 +30,10 @@
 	
 	<script src="Scripts/app.js" type="text/javascript"></script>
     <script src="Scripts/constants.js" type="text/javascript"></script>
-    <script src="Scripts/views.js" type="text/javascript"></script>	
-    <script src="Scripts/ViewModels/startViewModel.js" type="text/javascript"></script>	
+    <script src="Scripts/views.js" type="text/javascript"></script>	    
 	<script src="Scripts/Services/notifications.js" type="text/javascript"></script>
 	<script src="Scripts/Services/dataservices.js" type="text/javascript"></script>
+    <script src="Scripts/ViewModels/startViewModel.js" type="text/javascript"></script>	
 	<script src="Scripts/ViewModels/authenticationViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/ViewModels/todosViewModel.js" type="text/javascript"></script>
 	<script src="Scripts/ViewModels/newTodoItemViewModel.js" type="text/javascript"></script>	
@@ -52,8 +52,8 @@
         <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
 	</script>
     
-	<!-- Start page -->
-	<div id="startPage" data-role="view" data-title="TODOs" data-layout="defaultView" data-model="startViewModel">
+    <!-- Start page -->
+	<div id="startPage" data-role="view" data-title="TODOs" data-model="startViewModel">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
@@ -145,6 +145,9 @@
 				<label for="done">Done:</label>
 				<input id="done" data-role="switch" data-bind="checked: currentItem.done" />
 			</li>
+            <li data-bind="visible: currentItem.pictureAvailable">
+                <img src="" style="margin: 0px auto; display: block; width: 200px" data-bind="attr: { src: currentItem.pictureUrl }" />
+            </li>
 		</ul>
 
 		<br />
@@ -161,7 +164,7 @@
 	</div>
 
 	<!-- Add TODO page -->
-	<div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-before-show="beforePageShow">
+	<div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="addTodoPageInit" data-before-show="beforePageShow">
 		<header data-role="header">
 			<div data-role="navbar">
 				<a data-role="backbutton" data-align="left">Back</a>
@@ -174,16 +177,24 @@
 		<ul data-role="listview" data-style="inset">
 			<li>
 				<label for="newtasktitle">Title:</label>
-				<input data-bind="value: title" type="text" id="newtasktitle" />
+				<input data-bind="value: title" type="text" id="newtasktitle" required />
 			</li>
 			<li>
 				<label for="newtaskdetails">Details:</label>
 				<input data-bind="value: details" type="text" id="newtaskdetails" />
-			</li>
+			</li>            
+        </ul>
+                
+        <a data-role="button" style="margin: 0 0 0 1.1em;" data-icon="camera" data-bind="click: openCamera">Take picture</a>            
+        <ul data-role="listview" data-style="inset">
+            <li id="capturedImagePane" style="display: none">
+                <img src="" style="margin: 0px auto; display: block; width: 220px" id="capturedImage" data-bind="attr: { src: pictureUrl }"/>
+            </li>
 		</ul>
 
 		<br />
 		<a id="addTodoButton" data-bind="click: saveTodo" data-role="button">Save</a>
+        <br /><br />
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
@@ -195,7 +206,7 @@
 	</div>
 
     <!-- Settings page -->
-	<div id="settingsPage" data-role="view" data-title="TODOs" data-layout="defaultView" data-model="settingsViewModel">
+	<div id="settingsPage" data-role="view" data-title="TODOs" data-model="settingsViewModel">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
@@ -224,7 +235,7 @@
 	</div>
 
 	<!-- Info/About page -->
-	<div id="infoPage" data-role="view" data-title="TODOs" data-layout="defaultView">
+	<div id="infoPage" data-role="view" data-title="TODOs">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
@@ -235,11 +246,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.2 (2012-10-3.1)
+				Version 0.2.2 (2012-10-05.2)
 				<img data-align="right" alt="TODOs" src="Images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-3.1)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-05.2)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
