--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--<html manifest="cache.manifest">-->
 <html>
 <head>
 	<title>TODOs</title>
@@ -28,18 +27,19 @@
     <script src="js/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
 	
-	<script src="Scripts/app.js" type="text/javascript"></script>
-    <script src="Scripts/constants.js" type="text/javascript"></script>
-    <script src="Scripts/views.js" type="text/javascript"></script>	    
-	<script src="Scripts/Services/notifications.js" type="text/javascript"></script>
-	<script src="Scripts/Services/dataservices.js" type="text/javascript"></script>
-    <script src="Scripts/ViewModels/startViewModel.js" type="text/javascript"></script>	
-	<script src="Scripts/ViewModels/authenticationViewModel.js" type="text/javascript"></script>
-	<script src="Scripts/ViewModels/todosViewModel.js" type="text/javascript"></script>
-	<script src="Scripts/ViewModels/newTodoItemViewModel.js" type="text/javascript"></script>	
-	<script src="Scripts/ViewModels/errorViewModel.js" type="text/javascript"></script>
-    <script src="Scripts/ViewModels/acsViewModel.js" type="text/javascript"></script>
-    <script src="Scripts/ViewModels/settingsViewModel.js" type="text/javascript"></script>
+	<script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/applicationConstants.js" type="text/javascript"></script>
+    <script src="scripts/services/httpConstants.js" type="text/javascript"></script>
+    <script src="scripts/views.js" type="text/javascript"></script>
+    <script src="scripts/services/notifications.js" type="text/javascript"></script>
+	<script src="scripts/services/dataservices.js" type="text/javascript"></script>
+    <script src="scripts/viewmodels/startViewModel.js" type="text/javascript"></script>
+	<script src="scripts/viewmodels/authenticationViewModel.js" type="text/javascript"></script>
+	<script src="scripts/viewmodels/todosViewModel.js" type="text/javascript"></script>
+	<script src="scripts/viewmodels/newTodoItemViewModel.js" type="text/javascript"></script>
+	<script src="scripts/viewmodels/errorViewModel.js" type="text/javascript"></script>
+    <script src="scripts/viewmodels/acsViewModel.js" type="text/javascript"></script>
+    <script src="scripts/viewmodels/settingsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
 	<!-- Templates -->
@@ -59,7 +59,7 @@
 				<span data-role="view-title"></span>
 			</div>
 		</header>
-        <img src="Images/Wooden_Todo_256x256.png" alt="TODOs" />
+        <img src="images/Wooden_Todo_256x256.png" alt="TODOs" />
 		<a data-role="button" id="openLoginButton" data-bind="click: openLoginView">Login</a>
         <footer data-role="footer">
 			<div data-role="tabstrip">
@@ -145,7 +145,7 @@
 				<label for="done">Done:</label>
 				<input id="done" data-role="switch" data-bind="checked: currentItem.done" />
 			</li>
-            <li data-bind="visible: currentItem.pictureAvailable">
+            <li data-bind="visible: pictureAvailable">
                 <img src="" style="margin: 0px auto; display: block; width: 200px" data-bind="attr: { src: currentItem.pictureUrl }" />
             </li>
 		</ul>
@@ -246,11 +246,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.2.2 (2012-10-05.2)
-				<img data-align="right" alt="TODOs" src="Images/Wooden_Todo_32x32.png" style="float: right"/>
+				Version 0.2.3 (2012-10-07.1)
+				<img data-align="right" alt="TODOs" src="images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-05.2)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-07.1)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
