--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -14,8 +14,8 @@
 	<link href="styles/app.min.css" rel="stylesheet" type="text/css" />
 	
 	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-	
-    <script src="cordova.js" type="text/javascript"></script>
+  	
+	<script src="cordova.js" type="text/javascript"></script>
     <script src="childbrowser.js" type="text/javascript"></script>
 
     <script src="js/underscore-min.js" type="text/javascript"></script>
@@ -27,12 +27,14 @@
     <script src="js/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
 	
+    <script src="scripts/templateLoader.js" type="text/javascript"></script>
 	<script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/applicationConstants.js" type="text/javascript"></script>
-    <script src="scripts/services/httpConstants.js" type="text/javascript"></script>
-    <script src="scripts/views.js" type="text/javascript"></script>
+	<script src="scripts/views.js" type="text/javascript"></script>
+    <script src="scripts/services/httpConstants.js" type="text/javascript"></script>    
     <script src="scripts/services/notifications.js" type="text/javascript"></script>
 	<script src="scripts/services/dataservices.js" type="text/javascript"></script>
+    <script src="scripts/services/pictureservice.js" type="text/javascript"></script>
     <script src="scripts/viewmodels/startViewModel.js" type="text/javascript"></script>
 	<script src="scripts/viewmodels/authenticationViewModel.js" type="text/javascript"></script>
 	<script src="scripts/viewmodels/todosViewModel.js" type="text/javascript"></script>
@@ -42,15 +44,7 @@
     <script src="scripts/viewmodels/settingsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
-	<!-- Templates -->
-	<script type="text/x-kendo-template" id="tasksListTemplate">
-		<a data-align="left" data-bind="events:{touchend: navigateTodoDetails}">${title}</a>
-		<a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
-	</script>
-	<script type="text/x-kendo-template" id="idpListTemplate">
-        <img src="${imageUrl}" style="border: 50px; width: 60px" align="middle"/>
-        <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
-	</script>    
+   
         
     <!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-model="startViewModel" data-layout="defaultLayout">
@@ -130,7 +124,7 @@
 	</div>
 	
     <!-- Add TODO page -->
-    <div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="addTodoPageInit" data-before-show="beforePageShow" data-layout="defaultLayout">
+    <div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="addTodoPageInit" data-show="addTodoPageShow" data-before-show="beforePageShow" data-layout="defaultLayout">
         <header data-role="header">
             <div data-role="navbar">
                 <a data-role="backbutton" data-align="left">Back</a>
@@ -143,7 +137,7 @@
         <ul data-role="listview" data-style="inset">
             <li>
                 <label for="newtasktitle">Title:</label>
-                <input data-bind="value: title" type="text" id="newtasktitle" required />
+                <input data-bind="value: title" type="text" name="Title" id="newtasktitle" required />
             </li>
             <li>
                 <label for="newtaskdetails">Details:</label>
@@ -151,7 +145,7 @@
             </li>            
         </ul>
                 
-        <a data-role="button" style="margin: 0 0 0 1.1em;" data-icon="camera" data-bind="click: openCamera">Take picture</a>            
+        <a data-role="button" style="margin: 0 0 0 1.1em;" data-icon="camera" data-bind="click: takePicture">Take picture</a>            
         <ul data-role="listview" data-style="inset">
             <li id="capturedImagePane" style="display: none">
                 <img src="" style="margin: 0px auto; display: block; width: 220px" id="capturedImage" data-bind="attr: { src: pictureUrl }"/>
@@ -196,11 +190,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.2.3 (2012-10-07.1)
+				Version 0.2.3 (2012-10-09.2)
 				<img data-align="right" alt="TODOs" src="images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-07.1)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-09.2)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
