--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -182,7 +182,7 @@
 
         <a data-role="button" style="margin: 0 0 0 1.1em;" data-icon="camera" data-bind="click: takePicture">Take picture</a>            
         <ul data-role="listview" data-style="inset">
-            <li id="capturedImagePane" style="display: none">
+            <li id="capturedImagePane">
                 <img src="" style="margin: 0px auto; display: block; width: 220px" id="capturedImage" data-bind="attr: { src: pictureUrl }"/>
             </li>
         </ul>
